--- a/KressService/KressService.csproj
+++ b/KressService/KressService.csproj
@@ -110,6 +110,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FG14v3.cs" />
     <Compile Include="MyFgHub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
