--- a/KressService/packages.config
+++ b/KressService/packages.config
@@ -17,6 +17,10 @@
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.de" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="MongoDB.Bson" version="2.4.4" targetFramework="net461" />
+  <package id="MongoDB.Driver" version="2.4.4" targetFramework="net461" />
+  <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
 </packages>
